--- a/Glowb/Views/Cells/CollectionView/InteractionCollectionViewCell.xib
+++ b/Glowb/Views/Cells/CollectionView/InteractionCollectionViewCell.xib
@@ -96,9 +96,9 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yV-2I-hmR">
-                                <rect key="frame" x="0.0" y="318.5" width="270" height="0.0"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="0.0" y="338.5" width="270" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o7J-rO-aOR" customClass="Button" customModule="Glowb" customModuleProvider="target">
@@ -127,7 +127,7 @@
                             <constraint firstItem="5yV-2I-hmR" firstAttribute="leading" secondItem="FUT-B9-lwB" secondAttribute="leading" id="bpH-t1-9MM"/>
                             <constraint firstItem="bnF-fq-lpm" firstAttribute="centerX" secondItem="FUT-B9-lwB" secondAttribute="centerX" id="cvn-Od-xWe"/>
                             <constraint firstItem="7QM-vY-ZvZ" firstAttribute="centerX" secondItem="FUT-B9-lwB" secondAttribute="centerX" id="dJR-ck-2m7"/>
-                            <constraint firstItem="5yV-2I-hmR" firstAttribute="top" secondItem="7QM-vY-ZvZ" secondAttribute="bottom" constant="40" id="dPS-RD-kZZ"/>
+                            <constraint firstItem="5yV-2I-hmR" firstAttribute="top" secondItem="7QM-vY-ZvZ" secondAttribute="bottom" constant="60" id="dPS-RD-kZZ"/>
                             <constraint firstItem="9gw-mW-AOn" firstAttribute="centerX" secondItem="FUT-B9-lwB" secondAttribute="centerX" id="fJZ-rE-HiY"/>
                             <constraint firstItem="9z2-5Q-NTd" firstAttribute="top" secondItem="FUT-B9-lwB" secondAttribute="top" id="hws-Ps-leh"/>
                             <constraint firstItem="bnF-fq-lpm" firstAttribute="top" secondItem="9gw-mW-AOn" secondAttribute="bottom" constant="8" id="jQf-a1-ORd"/>
@@ -140,7 +140,7 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
-                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qr-zW-OpF">
+                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qr-zW-OpF">
                         <rect key="frame" x="0.0" y="0.0" width="270" height="626"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D4f-LH-RYD">
